--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
   <title>Ryusei | Portfolio</title>
 </head>
 <body>
+  <div class="profile">
+    <img class="profile-img" src="./6saka.webp">
+  </div>
   <h1>ts-esbuild-template</h1>
   <script src="./dist/bundle.js"></script>
 </body>
