--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,12 @@
 <body>
   <div class="profile">
     <img class="profile-img" src="./6saka.webp">
+    <div class="sns-link">
+      <img src="./twitter-logo-64.png">
+      <img src="./instagram-logo-64.png">
+      <img src="./facebook-logo-64.png">
+      <img src="./github-logo-64.png">
+    </div>
   </div>
   <h1>ts-esbuild-template</h1>
   <script src="./dist/bundle.js"></script>
