--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,14 @@
 <body>
   <div class="profile">
     <img class="profile-img" src="./6saka.webp">
-    <div class="sns-link">
-      <a href="https://twitter.com/6sRyuSk" target="_blank"><img src="./twitter-logo-64.png"></a>
-      <a href="https://instagram.com/6sryusk" target="_blank"><img src="./instagram-logo-64.png"></a>
-      <a href="https://www.facebook.com/profile.php?id=100011451810938" target="_blank"><img src="./facebook-logo-64.png"></a>
-      <a href="https://github.com/6sRyuSK" target="_blank"><img src="./github-logo-64.png"></a>
+    <div>
+      <h2>幸地 りゅうせい</h2>  
+      <div class="sns-link">
+        <a href="https://twitter.com/6sRyuSk" target="_blank"><img src="./twitter-logo-64.png"></a>
+        <a href="https://instagram.com/6sryusk" target="_blank"><img src="./instagram-logo-64.png"></a>
+        <a href="https://www.facebook.com/profile.php?id=100011451810938" target="_blank"><img src="./facebook-logo-64.png"></a>
+        <a href="https://github.com/6sRyuSK" target="_blank"><img src="./github-logo-64.png"></a>
+      </div>
     </div>
   </div>
   <h1>ts-esbuild-template</h1>
