--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,12 @@
       </div>
     </div>
   </div>
-  <h1>ts-esbuild-template</h1>
+  <ul id="projects">
+    <li class="project">
+      <a href=""><img /></a>
+      <h3 class="project-title"></h3>
+    </li>
+  </ul>
   <script src="./dist/bundle.js"></script>
 </body>
 </html>
