--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,34 @@
       <h3 class="project-title"></h3>
     </li>
   </ul>
+  <div class="introduces">
+    <h3>苦手なこと</h3>
+    <ul>
+      <li>鮮やかな配色</li>
+      <li>コードにコメント</li>
+    </ul>
+    <h3>得意なこと</h3>
+    <ul>
+      <li>Google検索</li>
+      <li>バグの調査</li>
+      <li>Githubでソースコードを漁る</li>
+    </ul>
+    <h3>まあまあできる</h3>
+    <ul>
+      <li>外国語のドキュメント・ブログからの情報収集</li>
+      <li>ワイヤーフレームのレイアウトをCSSで実装</li>
+      <li>それっぽいレイアウトを作る</li>
+    </ul>
+    <h3>やりたいこと</h3>
+    <ul>
+      <li>個人開発の比じゃないデータの種類を表示するフロントエンド、コンポーネント開発を経験したい</li>
+      <li>Webアプリのベストプラクティスをパクりつつ模索したい</li>
+      <li>知識・知見を貯める</li>
+      <li>個人開発も同時に行いたい</li>
+      <li>面白い話いっぱい聞いて刺激を受けたい</li>
+      <li>趣味の写真・映像をWebアプリで表現するアイデアと知識を見つけたい</li>
+    </ul>
+  </div>
   <script src="./dist/bundle.js"></script>
 </body>
 </html>
